--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node src/server/server.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
-    
   },
   "keywords": [],
   "author": "",
@@ -33,13 +32,15 @@
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.4",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^25.2.7",
     "style-loader": "^1.1.3",
     "superagent": "^5.2.2",
     "supertest": "^4.0.2",
+    "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.10.3",
     "workbox-webpack-plugin": "^5.1.2"
   }
-  
 }
