--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.5",
+    "timezz": "^5.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
